# rust-stopwatch

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: lib.rs
tests/: lib.rs
