[package]

name = "stopwatch"
version = "0.0.5"
authors = ["Chucky Ellison <cme@freefour.com>"]

description = "A stopwatch library for timing things."
repository = "https://github.com/ellisonch/rust-stopwatch"
readme = "README.md"
keywords = ["stopwatch", "timing"]
license = "MIT"

[dependencies]
time = "*"
num = "*"
